# salmonn-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: deepspeed_zero2.json  finetune.json  train_stage1.json  train_stage2.json
examples/: inference_hf.py  inference_manifest.json  micl_manifest.json  training_manifest.json
salmonn/: __init__.py  audio.py  configuration_salmonn.py  modeling_salmonn.py  text.py
salmonn/spear/: __init__.py  model.py  scaling.py  subsampling.py  zipformer.py  zipformer_layerwise.py
salmonn/training/: __init__.py  collator.py  dataset.py
salmonn/zipformer/: __init__.py  model.py  scaling.py  subsampling.py  zipformer.py  zipformer_peft.py
scripts/: convert_checkpoint.py  infer.py  infer_batch.py  train.py
tests/: test_configuration.py  test_dataset.py  test_inference.py  test_text.py
