[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salmonn-2"
version = "0.1.0"
description = "Training and inference code for SALMONN-2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.5",
  "torchaudio>=2.5",
  "transformers>=4.57,<5",
  "peft>=0.17",
  "lhotse>=1.31",
  "safetensors>=0.4"
]

[project.optional-dependencies]
train = ["accelerate>=1.0", "deepspeed>=0.18"]
flash = ["flash-attn>=2.7"]
test = ["pytest>=8"]
dev = ["pre-commit>=3.7", "pytest>=8"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["salmonn/zipformer"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.packages.find]
include = ["salmonn*"]
